          07-01-27  Bfo     os9exec_nt  - NATIVE_SUPPORT added
                                        - native interface definitions added
                                        - <with_dbgDLLs> added
                                        - 'init_plugins' and the full plugin support added
                                        - Callback routines for 'cclib' implemented here now
          07-01-27  Bfo     modstuff    : Support for linking the native resource files
          07-01-28  Bfo     intcommand  - Native program handling, <modBaseP> param added
                                        - int command 'native' added
          07-01-28  Bfo     *.mcp       : Up to date
                                                
    3.35  07-??-??  Bfo
    ------------------- 
*/



/* unresolved bugs: */
/*
    !!  "_" name convention on Windows (hawk_C0).
    
    -   MPW uses its I/O currently partly also for the tty/pty system.
    -   "mgencas" will not startup over network (Linux), "mme" has also problems.
    -   Linux/MacOSX telnet close still quits emulator (recognition of end cond not correctly)
    -   "inetd" superdaemon is not yet running correctly.
    -   A$AtDate restricted to 248 days / will not adjust when system time changes

   (+)  Take tty00/pty00 first (problems with arbitration)
   (+)  setime_Y2K version with param passing --> 1900
   (+)  icpt_signal problem with "clock2" utility
*/


/* To do: */
/*
    -   RBF: do read only, if write larger than a sector
    -  (SCSI subsystem for Linux)
    -   direct line editing on Linux (over network)
    -   Faster directory read (Windows)
    -   Implement internal command "ls" in UNIX style: "ls -la".
    -   <in_recursion> for debug load
    -   btree optimisation
    -   termcap support for the DOS window.
    -   paging for SCF devices
    -   tab expansion for SCF devices

   (+)  return  of d1.l from pipe-systasks
   (+)  passing of d2.l to   pipe-open
*/